--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-.flatpak-builder/
-go.mod.yml
-gtkcord4/
+# Created by https://www.toptal.com/developers/gitignore/api/flatpak
+# Edit at https://www.toptal.com/developers/gitignore?templates=flatpak
+
+### Flatpak ###
+.flatpak-builder
+build
+build-dir
+repo
+
+# End of https://www.toptal.com/developers/gitignore/api/flatpak
